<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/edit_product"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/product_name"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_outline_inventory_2_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/product_price"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/product_description"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_outline_description_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/product_barcode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/product_barcode"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="13"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/barcode_48px"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/share_product"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/share_product"
        android:padding="16dp"
        android:textColorHint="@color/white"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

</LinearLayout>